--- a/radio_ae/radio_ae.tex
+++ b/radio_ae/radio_ae.tex
@@ -100,7 +100,7 @@ For example with $T_z=0.04, d=80, R_q=1000$ symbols/s.
 \end{center}
 \end{figure}
 
-We wish to simulate an AWGN channel with a user-defined $E_b/N_0$, where $E_b$ is the energy of each BPSK symbol, and $N_0$ is the noise power per unit bandwidth.  Consider a real valued signal sampled off air (Figure \ref{fig:bandpass}).  We will follow convention and define signal and noise power in the ``single sided" bandpass interval of the frequency spectrum with bandwidth B centered on $\omega$.  As the interval is single sided, we must use complex valued quantities to represent it.
+We wish to simulate an AWGN channel with a user-defined $E_b/N_0$, where $E_b$ is the energy of each BPSK symbol, and $N_0$ is the noise power per unit bandwidth.  Consider a real valued signal sampled off air (Figure \ref{fig:bandpass}).  We will follow convention and define signal and noise power in the ``single sided" bandpass interval of the frequency spectrum with bandwidth B centred on $\omega$.  As the interval is single sided, we must use complex valued quantities to represent it.
 
 We wish to simulate a bandpass AWGN channel at baseband ($\omega=0$).  This implies a frequency shift of the complex valued signal, but the signal remains complex valued and it's power is unchanged. The negative frequency component on the LHS of Figure \ref{fig:bandpass} is redundant and after frequency shifting can be removed by filtering.
 
@@ -232,9 +232,9 @@ BER = 0.5 \left(1-\sqrt{\frac{E_b/N_0}{E_b/N_0+1}} \right)
 \end{center}
 \end{figure}
 
-Impressive results have been obtained from symbol rate simulations of an OFDM modem, which assumed ideal synchronisation.  We would like to verify these results using real radio signals in Over The Cable (OTC) and Over the Air (OTA) tests.  This requires building up a rate $F_s$ system, and synchronisation subsystems.  For our prrof of concept system, the choice was made to use OFDM to handle HF multipath channel, and classical DSP pilot symbol based synchronisation, although we acknowldge potential for ML based synchronisation in future iterations.  The combined ML and OFDM/DSP system is illustrated in Figure \ref{fig:ml_dsp_framework}.
+Impressive results have been obtained from symbol rate simulations of an OFDM modem, which assumed ideal synchronisation.  We would like to verify these results using real radio signals in Over The Cable (OTC) and Over the Air (OTA) tests.  This requires building up a rate $F_s$ system, and synchronisation subsystems.  For our proof of concept system, the choice was made to use OFDM to handle HF multipath channel, and classical DSP pilot symbol based synchronisation, although we acknowledge potential for ML based synchronisation in future iterations.  The combined ML and OFDM/DSP system is illustrated in Figure \ref{fig:ml_dsp_framework}.
 
-The goal is to compare speech quality to SSB at $E_b/N_0=0dB$ (approx -3dB SNR in a 3000Hz BW), and work through any issues that prevent the system working over real radio channels.  PAPR optimisation will be ignored for the first iteration, as our initial goal is to verifiy the low $E_b/N_0$ results suggested by the symbol rate simulations.
+The goal is to compare speech quality to SSB at $E_b/N_0=0dB$ (approx -3dB SNR in a 3000Hz BW), and work through any issues that prevent the system working over real radio channels.  PAPR optimisation will be ignored for the first iteration, as our initial goal is to verify the low $E_b/N_0$ results suggested by the symbol rate simulations.
 
 \begin{figure}
 \caption{OFDM modem frame, $P$ denotes pilot symbol, $D$ payload data symbols. This example has a modem frame of $N_s=4$ symbols, and $N_c=3$ carriers.  Each symbol $D$ or $P$ is comprised of a $T_{cp}$ second Cyclic Prefix and $T_s^\prime$ second symbol $D^\prime$.}
@@ -285,14 +285,14 @@ The goal is to compare speech quality to SSB at $E_b/N_0=0dB$ (approx -3dB SNR i
 \end{center}
 \end{figure}
 
-The general design of the OFDM frame in Figure \ref{fig:ofdm_frame}.  QPSK symbols are mapped to a matrix of parallel carriers at a relatively low symbol rate in order to sucessfully pass through the target HF multipath channel. Pilot symbols are periodically inserted into each OFDM carrier.  At the receiver the  pilots are used to estimate the time varying phase of the channel (equalisation), and for initial acquistion (coarse frequency, and frame sync) of the received signal.  The disadvantage of pilot based schemes is they consume carrier power that would otherwise be available for the data symbols, and require the symbol rate and hence overall RF bandwidth to be increased to maintain the payload data rate.  After the IDFT stage a cyclic prefix is inserted to accomodate inter symbol interference.  The cyclic prefix also consumes carrier power and requires an increase in RF bandwidth.  The OFDM waveform details, including overheads, are explained in detail in the waveform design spreadsheet \cite{FreeDV-032}.  The \emph{Candidate 2} waveform has a RF bandwidth of approximately 1500 Hz, with 500Hz due to synchronisation overhead.
+The general design of the OFDM frame in Figure \ref{fig:ofdm_frame}.  QPSK symbols are mapped to a matrix of parallel carriers at a relatively low symbol rate in order to successfully pass through the target HF multipath channel. Pilot symbols are periodically inserted into each OFDM carrier.  At the receiver the  pilots are used to estimate the time varying phase of the channel (equalisation), and for initial acquisition (coarse frequency, and frame sync) of the received signal.  The disadvantage of pilot based schemes is they consume carrier power that would otherwise be available for the data symbols, and require the symbol rate and hence overall RF bandwidth to be increased to maintain the payload data rate.  After the IDFT stage a cyclic prefix is inserted to accommodate inter symbol interference.  The cyclic prefix also consumes carrier power and requires an increase in RF bandwidth.  The OFDM waveform details, including overheads, are explained in detail in the waveform design spreadsheet \cite{FreeDV-032}.  The \emph{Candidate 2} waveform has a RF bandwidth of approximately 1500 Hz, with 500Hz due to synchronisation overhead.
 
-A pilot based sync system was built in PyTorch, and is used for coarse and fine timing, phase and amplitide equalisation.  Unlike classical PSK, the ML network is likely to be sensitive to amplitude variations.  Phase equalisation also allows small frequency offsets ($\pm2$ Hz) to be handled, sufficient for tests with short samples.
+A pilot based sync system was built in PyTorch, and is used for coarse and fine timing, phase and amplitude equalisation.  Unlike classical PSK, the ML network is likely to be sensitive to amplitude variations.  Phase equalisation also allows small frequency offsets ($\pm2$ Hz) to be handled, sufficient for tests with short samples.
 
-Several phase estimators were prototyped, and evaluated using BER measurements. Maintaining low loss syncronisation at low $E_b/N_0$ is challenging.  Using per-carrier phase estimation makes the system less dependant on fine timing accuracy and gives us the ability to handle multipath, but has higher loss than algorithms that consider all carriers at the same time.  As further work a lower latent dimension $d$ and higher $E_b/N_0$, would allocate more power to pilots, and result in less carriers.
+Several phase estimators were prototyped, and evaluated using BER measurements. Maintaining low loss synchronisation at low $E_b/N_0$ is challenging.  Using per-carrier phase estimation makes the system less dependant on fine timing accuracy and gives us the ability to handle multipath, but has higher loss than algorithms that consider all carriers at the same time.  As further work a lower latent dimension $d$ and higher $E_b/N_0$, would allocate more power to pilots, and result in less carriers.
 
 \begin{figure}[h]
-\caption{OFDM pilot based synchronisation algorithm performance, tested by measuring the BER obtained using discrete PSK symbols on an AWGN channel.  With ideal sync, the autoencoder produces intelligable speech at $E_b/N_0=-6$ dB which corresponds to BER=0.24.  Several algorithms, combined with gain and frequency offsets were simulated.}
+\caption{OFDM pilot based synchronisation algorithm performance, tested by measuring the BER obtained using discrete PSK symbols on an AWGN channel.  With ideal sync, the autoencoder produces intelligible speech at $E_b/N_0=-6$ dB which corresponds to BER=0.24.  Several algorithms, combined with gain and frequency offsets were simulated.}
 \label{fig:ofdm_sync}
 \begin{center}
 \input ofdm_sync.tex
@@ -300,16 +300,16 @@ Several phase estimators were prototyped, and evaluated using BER measurements. 
 \end{figure}
 
 \begin{figure}[h]
-\caption{OFDM pilot based synchronisation algorithm performance, tested by measuring the BER obtained using discrete PSK symbols on an multipath (MPP) channel. The ``genie" curve is slightly better than theory, probably due to an insufficiently long run.  At the BER=0.24 theshold, the \emph{LS} algorithm has a 2dB loss compared to the ``genie" curve}
+\caption{OFDM pilot based synchronisation algorithm performance, tested by measuring the BER obtained using discrete PSK symbols on an multipath (MPP) channel. The ``genie" curve is slightly better than theory, probably due to an insufficiently long run.  At the BER=0.24 threshold, the \emph{LS} algorithm has a 2dB loss compared to the ``genie" curve}
 \label{fig:ofdm_sync_mp}
 \begin{center}
 \input ofdm_sync_mp.tex
 \end{center}
 \end{figure}
 
-Figurew \ref{fig:ofdm_sync} and \ref{fig:ofdm_sync_mp} plots the simulated perfomance of the OFDM pilot based synchronisation system on AWGN and multipath channels.  The \emph{genie} curve is the baseline rate $F_s$ OFDM system with ideal sync, and matches the theoretical BPSK BER curve.  Using this baseline system to send ML symbols, we obtain intelligable speech at $E_b/N_0=-6$, which corresponds to BER=0.24 in a digital modem.  We can use the BER=0.24 line to estimate the synchronisation loss at this operating point, which for the \emph{mean6} and \emph{LS} algorithms under realistic conditions is around 2 to 2.4 dB on AWGN, and 2dB on the  multipath channel. The \emph{LS} works better on fast fading multipath channels, so was chosen for the HF OTA trials.
+Figure \ref{fig:ofdm_sync} and \ref{fig:ofdm_sync_mp} plots the simulated performance of the OFDM pilot based synchronisation system on AWGN and multipath channels.  The \emph{genie} curve is the baseline rate $F_s$ OFDM system with ideal sync, and matches the theoretical BPSK BER curve.  Using this baseline system to send ML symbols, we obtain intelligible speech at $E_b/N_0=-6$, which corresponds to BER=0.24 in a digital modem.  We can use the BER=0.24 line to estimate the synchronisation loss at this operating point, which for the \emph{mean6} and \emph{LS} algorithms under realistic conditions is around 2 to 2.4 dB on AWGN, and 2dB on the  multipath channel. The \emph{LS} works better on fast fading multipath channels, so was chosen for the HF OTA trials.
 
-Table \ref{tab:sync_losses} summarises the sync losses.  These are comnparable to classical DSP OFDM data modems. Combined with $L_p$, we estimate a total sync loss of 4dB for this first pass of the ML system combined with classical pilot based synchronisation.
+Table \ref{tab:sync_losses} summarises the sync losses.  These are comparable to classical DSP OFDM data modems. Combined with $L_p$, we estimate a total sync loss of 4dB for this first pass of the ML system combined with classical pilot based synchronisation.
 
 \begin{table} [H]
 \centering
@@ -384,24 +384,24 @@ Table \ref{tab:sync_losses} summarises the sync losses.  These are comnparable t
 
 \subsection{March 2024 Results}
 
-In March 2024, the system was tested over a VHF OTC AWGN path and OTA on a variety of real world Australian HF multipath paths. Figure \ref{fig:vhf_otc} and Figure \ref{fig:vhf_otc} describe the experimental configurations.  Wave fiules contating a sine wave tone, compressed SSB, and the \emph{radae} signal were sent over the same channel at the same time. The speech quality obtianed was consistent with the simulations and competative with SSB sent over the same channel at the same time.
+In March 2024, the system was tested over a VHF OTC AWGN path and OTA on a variety of real world Australian HF multipath paths. Figure \ref{fig:vhf_otc} and Figure \ref{fig:vhf_otc} describe the experimental configurations.  Wave files containing a sine wave tone, compressed SSB, and the \emph{radae} signal were sent over the same channel at the same time. The speech quality obtained was consistent with the simulations and competitive with SSB sent over the same channel at the same time.
 
 Take aways:
 \begin{enumerate}
-\item We have combined ML vocoder, ML autoencoder and classical DSP OFDM to build a system capable of sending speech over radio channels.  It is robust to AWGN and multipath channel impairments.  Our initial simulation, VHF OTC, and HF OTA tests suggest performance competative with the analog SSB at the same $C/N_0$.
+\item We have combined ML vocoder, ML autoencoder and classical DSP OFDM to build a system capable of sending speech over radio channels.  It is robust to AWGN and multipath channel impairments.  Our initial simulation, VHF OTC, and HF OTA tests suggest performance competitive with the analog SSB at the same $C/N_0$.
 \item The total ``sync losses" due to pilot, cyclic prefix overheads and non-ideal equalisation are around 4dB.  It is conceivable these can be reduced using ML rather than classical DSP. 
 \item The ML algorithms run at a 40ms frame rate (with some DSP at the OFDM 20ms symbol rate), resulting in modest CPU requirements.  The PyTorch simulation code runs several times faster than real time in inference mode.
 \item Simulation and initial HF OTA results show surprisingly good performance on multipath channels where the period of the fading (100's of ms) is large compared to the 40ms analysis window of the ML code.  Classical DSP would require a 1000-2000 ms interleaver (introducing a algorithmic delay of the same order) for similar robustness to fading on these channels.
 \item Unlike regular PSK, we require magnitude estimation and correction, due to the limited dynamic range of ML systems and the wide dynamic range of radio signals.
-\item The \emph{Candidate 2} OFDM frame design \cite{FreeDV-032} contains three latent vectors $z$, so introduces an algorthmic delay of 120ms, due to OFDM framing considerations.  This is tolerable in a PTT radio system, but ideally should be reduced.
-\item Substituting classical PSK digital symbols and measuring BER is a very useful way to test sync, and to allows us to verity $E_b/N_0$ using BER measurments during development.
-\item Much of our development effort to date has concerned with the ``is this too good to be true" question; to date significantly more effort was put into noise calibration, syncronisation algorithms and testing than the actual ML.
+\item The \emph{Candidate 2} OFDM frame design \cite{FreeDV-032} contains three latent vectors $z$, so introduces an algorithmic delay of 120ms, due to OFDM framing considerations.  This is tolerable in a PTT radio system, but ideally should be reduced.
+\item Substituting classical PSK digital symbols and measuring BER is a very useful way to test sync, and to allows us to verity $E_b/N_0$ using BER measurements during development.
+\item Much of our development effort to date has concerned with the ``is this too good to be true" question; to date significantly more effort was put into noise calibration, synchronisation algorithms and testing than the actual ML.
 \end{enumerate}
 
 Further work:
 \begin{enumerate}
-\item Try a low dimension latent vector, e.g. $d=40$, and see if similar speech quality can be obtained at 3dB higher $E_b/N_0$. This would result in lower sync losses and RF bandwith for the same channel SNR or $C/N_0$, as the $E_b/N_0$ of the pilots would be increased. Does the encoder output still resemble BPSK, or is it training to a higher order constellation?
-\item There is significant synchronisation loss from the classical DSP OFDM waveform and associated sync algorithms. Attempt to use the ML network to perform frequency, phase and amplitude equalisation, with or without passing the pilots to the decoder.  An initial attempt (model07) without pilots showed some ability to correct phase, frequency, and magnitude offsets, but resulted in some performance degredation. However this may be acceptable if comparable to the pilot based sync losses. Some pilot or unique word injection may still be required to perform coarse and fine timing estimation using classical DSP running at the sample rate.
+\item Try a low dimension latent vector, e.g. $d=40$, and see if similar speech quality can be obtained at 3dB higher $E_b/N_0$. This would result in lower sync losses and RF bandwidth for the same channel SNR or $C/N_0$, as the $E_b/N_0$ of the pilots would be increased. Does the encoder output still resemble BPSK, or is it training to a higher order constellation?
+\item There is significant synchronisation loss from the classical DSP OFDM waveform and associated sync algorithms. Attempt to use the ML network to perform frequency, phase and amplitude equalisation, with or without passing the pilots to the decoder.  An initial attempt (model07) without pilots showed some ability to correct phase, frequency, and magnitude offsets, but resulted in some performance degradation. However this may be acceptable if comparable to the pilot based sync losses. Some pilot or unique word injection may still be required to perform coarse and fine timing estimation using classical DSP running at the sample rate.
 \item We may be able to improve on algorithmic delay using ML sync techniques that are less dependant on traditional OFDM framing considerations.
 \item Some form or interleaving, or a long time window for the ML network, may improve performance.
 \item Work to improve the current classical DSP sync, e.g. from Figure \ref{fig:ofdm_sync} a feedback loop to track out frequency offsets is worth 1 dB.
@@ -413,7 +413,7 @@ Further work:
 
 \section{Comparison with Other Speech Waveforms}
 
-We wish to compare the potential of our radio autoencoder with existing waveforms used for speech transmission over radio channels.  This section assumes the \emph{radae} system can send intelligable speech at an $E_b/N_0$ of -6dB, with a PAPR of 1dB, both results have been demonstrated in simulation (but not at the time of writing together over real world radio channels).  We include a 3dB syncronisation overhead, anticipating modest improvements over the 4dB obtained with our proof of concept system described above.
+We wish to compare the potential of our radio autoencoder with existing waveforms used for speech transmission over radio channels.  This section assumes the \emph{radae} system can send intelligible speech at an $E_b/N_0$ of -6dB, with a PAPR of 1dB, both results have been demonstrated in simulation (but not at the time of writing together over real world radio channels).  We include a 3dB synchronisation overhead, anticipating modest improvements over the 4dB obtained with our proof of concept system described above.
 
 We start with the assumption that we have a transmitter of $C$ watts, and an AWGN channel with a spectral noise density of $N_0$ watts/Hz. As the speech waveforms being considered vary in bandwidth we will choose $C/N_0$ as the SNR metric.
 
@@ -423,11 +423,11 @@ The $C/N_0$ (in dBHz) at the demodulator input of a terrestrial radio receiver i
 \end{equation}
 where $P$ is the maximum output power of the transmitter power amplifier, $PAPR$ is the Peak to Average Power Ratio of the waveform, $L_{path}$ is the path loss, $NF$ is the noise figure of the receiver.  For example consider a 400 MHz FM hand held radio over a 1km urban (non line of site) path.  The radio has a 1W (30 dBm) power output, $L_{path}=120$ dB, with noise dominated by ambient EMI such that $NF=10$ dB. $C/N_0 = 30 - 0 - 120 - 10 + 174 = 74$ dBHz, sufficient for good quality speech (Table \ref{tab:waveforms_good}).
 
-Note that $C/N_0$ at the demodulator is a function of the waveform PAPR.  With all other link properties (e.g. peak PA power, noise figure, path loss) being equal, a high PAPR reduces the $C/N_0$ available at the receiver.  We effectively ``back off" the transmitter power from the maximum $P$ by the PAPR.  We assume the PA is capable of sustaining $P$ watts indefinately, i.e. it is only the waveform choice that lowers the average power. As PAPR varies by waveform and has an impact on the $C/N_0$ available the receiver, it should be included in any metric for comparison of waveforms.  We define $P/N_0$ as:
+Note that $C/N_0$ at the demodulator is a function of the waveform PAPR.  With all other link properties (e.g. peak PA power, noise figure, path loss) being equal, a high PAPR reduces the $C/N_0$ available at the receiver.  We effectively ``back off" the transmitter power from the maximum $P$ by the PAPR.  We assume the PA is capable of sustaining $P$ watts indefinitely, i.e. it is only the waveform choice that lowers the average power. As PAPR varies by waveform and has an impact on the $C/N_0$ available the receiver, it should be included in any metric for comparison of waveforms.  We define $P/N_0$ as:
 \begin{equation}
 P/N_0 = C/N_0 + PAPR
 \end{equation} 
-A waveform that delivers intelligable speech at a low $P/N_0$ is the target.  A low PAPR waveform has other desirable properties, such as greater PA efficiency, longer battery life, and the use of low cost semiconductors in the radio power amplifier electronics.
+A waveform that delivers intelligible speech at a low $P/N_0$ is the target.  A low PAPR waveform has other desirable properties, such as greater PA efficiency, longer battery life, and the use of low cost semiconductors in the radio power amplifier electronics.
 
 \begin{table} [H]
 \centering
@@ -437,11 +437,11 @@ A waveform that delivers intelligable speech at a low $P/N_0$ is the target.  A 
  \hline
  Single Sideband      & 0dB SNR in 3000Hz noise BW, 2400Hz audio bandwidth, Tx speech compressor with 6dB PAPR \\
  Frequency Modulation & -120 dBm quoted for many NBFM radios, 54dB above -174dBm/Hz noise floor \\
- FreeDV 700D          & 10\% PER theshold at -2dB SNR in 3000Hz noise BW \\
- Radio Autoencoder    & Intelligable speech at $E_b/N_0=-6$ dB, $R_b=2000$ symbols/s, 3dB sync overhead, a PAPR of 1dB \\
+ FreeDV 700D          & 10\% PER threshold at -2dB SNR in 3000Hz noise BW \\
+ Radio Autoencoder    & Intelligible speech at $E_b/N_0=-6$ dB, $R_b=2000$ symbols/s, 3dB sync overhead, a PAPR of 1dB \\
  \hline
 \end{tabular}
-\caption{Thresholds for speech link closure for each waveform. The link is considered closed when the speech is barely intelligable to a trained listener.}
+\caption{Thresholds for speech link closure for each waveform. The link is considered closed when the speech is barely intelligible to a trained listener.}
 \label{tab:waveforms_thresh}
 \end{table}
 
@@ -490,7 +490,7 @@ TODO: include 1st gen VHF/UHF digital voice - I think they go down to -123 dB (5
  Single Sideband      & 3000 & 55 & 61 & -24 \\
  \hline
 \end{tabular}
-\caption{Comparison of good quality ``arm chair copy" by waveform over AWGN channels. They are ranked in terms of maximum achievable speech quality. FreeDV 700D has been omitted because of its low speech quality even at high SNR. Even at 20dB SNR there is noticable noise in received SSB, although DSP based noise reduction may help. Only the radio autoencoder delivers wideband (8000 Hz) speech.}
+\caption{Comparison of good quality ``arm chair copy" by waveform over AWGN channels. They are ranked in terms of maximum achievable speech quality. FreeDV 700D has been omitted because of its low speech quality even at high SNR. Even at 20dB SNR there is noticeable noise in received SSB, although DSP based noise reduction may help. Only the radio autoencoder delivers wideband (8000 Hz) speech.}
 \label{tab:waveforms_good}
 \end{table}
 
@@ -511,7 +511,7 @@ TODO: include 1st gen VHF/UHF digital voice - I think they go down to -123 dB (5
  $N$ & total noise power & Watts \\
  $N_c$ & Number of carriers  \\
  $N_0$ & Noise power in 1 Hz of bandwidth  \\
- $P/N_0$ & Peak trasnmitter power/spectral noise density \\
+ $P/N_0$ & Peak transmitter power/spectral noise density \\
  $\bf{q}$ & vector of QPSK symbols \\ 
  $q_i$ & single QPSK symbol, element of $\bf{q}$ \\ 
  $R_b$ & BPSK symbol rate & symbols/second \\
